--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-03-11 10:07:01
+ * @LastEditTime: 2022-03-13 13:20:44
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -84,11 +84,11 @@
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ES的部署配置及维护, logstash日志过滤规则的编写.
+                            熟悉ES的部署配置及维护, Logstash日志过滤规则的编写.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            了解Prometheus监控查询, 结合grafana实现图形展示.
+                            了解Prometheus监控查询, 结合Grafana实现图形展示.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
@@ -148,31 +148,31 @@
                     <article>
                         <h2>Storm容器化部署 - 邮电</h2>
                         <p>
-                            &emsp;&emsp;项目背景: 小组接到需求对部分原生组件容器化, 使用helm批量部署并对接到自研K8s. 个人分配到的组件是Storm. 因官方chart仓库中已存在Storm包, 在此基础上做二次修改. <br>
-                            &emsp;&emsp;难点: 原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulset使用SC进行持久化; 定制参数则在value文件中追加定义, 并修改相对应的模板, 完成任务.
+                            <strong style="color: #cf8a05;">项目背景: </strong>小组接到需求对部分原生组件容器化, 使用helm批量部署并对接到自研K8s. 个人分配到的组件是Storm. 因官方chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
+                            <strong style="color: #cf8a05;">难点: </strong>原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulset使用SC进行持久化; 定制参数则在value文件中追加定义, 并修改相对应的模板, 完成任务.
                         </p>
                     </article>
                     <article>
                         <h2>ELK日志收集 - 邮电</h2>
                         <p>
-                            &emsp;&emsp;项目背景: 因内部业务需求从日志进行检索关键信息. 需要在业务系统服务器上部署filebeat, 收集日志到logstash, 过滤后传输到es集群. 为防止logstash压力过大, filebeat到logstash的链路中引入Kafka做缓存. <br>
-                            &emsp;&emsp;个人参与了该项目中全部流程, 负责编写部分日志的filebeat收集, logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要提前聚合统计, 于logstash的aggregate编写Ruby做聚合计算. </p>
+                            <strong style="color: #cf8a05;">项目背景:</strong> 因内部业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群. 为防止Logstash压力过大, Filebeat到Logstash的链路中引入Kafka做缓存. <br>
+                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要提前聚合统计, 于Logstash的aggregate编写Ruby做聚合计算. </p>
                     </article>
                     <article>
                         <h2>业务上报自动化 - 卓望</h2>
                         <p>
-                            &emsp;&emsp;项目背景: 因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
+                            <strong style="color: #cf8a05;">项目背景: </strong>因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
                             href="https://raw.githubusercontent.com/erythrun/OpsScript/master/grafana_monitor_report_by_selenium.py"
                             target="_BLANK">代码链接</a><br>
 
-                            &emsp;&emsp;难点: 1. 脚本一开始是直接使用requests库去链接网页, 后发现数据需无头浏览器执行JS后才能获取到; 2. Grafana因安全需求, 需开启账号密码认证. 脚本无法通过点击登录去获取数据;  最后在grafana中配置header, 部署Nginx做反向代理插入header, 通过安全认证, 获取到数据.
+                            <strong style="color: #cf8a05;">难点: </strong>1. 脚本一开始是直接使用requests库去链接网页, 后发现数据需无头浏览器执行JS后才能获取到; <br>&emsp;&emsp; 2. Grafana因安全需求, 需开启账号密码认证. 脚本无法通过点击登录去获取数据;  最后在Grafana中配置header, 部署Nginx做反向代理插入header, 通过安全认证, 获取到数据.
                         </p>
                     </article>
                     <article>
                         <h2>广东网优项目 - 卓望</h2>
                         <p>
                             该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
-                            在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 部署Ceph为后端存储等.
+                            在该项目中, 我参与了K8s集群的高可用部署; ETCD数据库的数据备份与恢复; 部署Ceph为后端存储等.
                         </p>
                     </article>
                     <!-- <article>
@@ -229,7 +229,7 @@
                     <article>
                         <h2> </h2>
                         <p>
-                            乐于尝试新事物, 遇到问题能通过google或官方文档去学习, 解决;<br>
+                            乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
                             不断提高自己的技术与工作能力中. <br>
                             如需查看网页版简历请访问 <a href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
