--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-03-13 13:20:44
+ * @LastEditTime: 2022-03-13 13:24:17
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -171,7 +171,7 @@
                     <article>
                         <h2>广东网优项目 - 卓望</h2>
                         <p>
-                            该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
+                            该项目使用到的技术栈有: K8s, Docker, Ceph等. <br>
                             在该项目中, 我参与了K8s集群的高可用部署; ETCD数据库的数据备份与恢复; 部署Ceph为后端存储等.
                         </p>
                     </article>
