自我评价追加

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-03-16 10:57:38
+ * @LastEditTime: 2022-03-16 12:20:16
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -239,7 +239,7 @@
                         <h2> </h2>
                         <p>
                             乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
-                            不断提高自己的技术与工作能力中. <br>
+                            不断提高自己的技术与工作能力(Terraform学习中). <br>
                             如需查看网页版简历请访问 <a href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
