elk配置文件追加

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-03-16 12:20:16
+ * @LastEditTime: 2022-03-23 19:29:52
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -156,7 +156,7 @@
                         <h2>ELK日志收集 - 邮电</h2>
                         <p>
                             <strong style="color: #cf8a05;">项目背景:</strong> 因内部业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群.  <br>
-                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要提前聚合统计, 于Logstash的aggregate模块编写Ruby做聚合计算. 最后Grafana从ES获取数据做图形展示. </p>
+                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要提前聚合统计, 于Logstash的aggregate模块编写Ruby做聚合计算. 最后Grafana从ES获取数据做图形展示. <a href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件</a></p>
                     </article>
                     <article>
                         <h2>电信CCSE(自研K8s)平台维护 - 邮电</h2>
