技能调整; 公司时间样式调整

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-03-23 19:29:52
+ * @LastEditTime: 2022-04-05 13:07:37
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -80,15 +80,15 @@
                             熟悉CentOS, Ubuntu, Debian操作系统, 了解系统参数调优. </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉Ansible, Jenkins, Gitlab等自动化工具的使用.
+                            熟悉ES的部署配置及维护, Logstash日志正则过滤规则的编写.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ES的部署配置及维护, Logstash日志过滤规则的编写.
+                            熟悉Ansible, Jenkins, Gitlab等自动化工具的使用.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            了解Prometheus监控查询, 结合Grafana实现图形展示.
+                            熟悉Prometheus监控查询, 结合Grafana实现图形展示.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
@@ -96,7 +96,7 @@
                         </li>
                         <li>
                             <progress value="55" max="100"></progress>
-                            了解数据库原理, 具备对MySQL, Redis配置与维护能力.
+                            了解数据库原理, MySQL, Redis的配置, 维护, 备份等.
                         </li>
                         <li>&nbsp;</li>
                     </ul>
@@ -111,7 +111,7 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>2021.03 - ?    广东邮电 - 云平台运维 </h2>
+                        <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
                             1. 电信各省份资源池自研K8s平台的搭建, 日常维护, 故障处理等. <br>
                             2. 新资源池上线服务器的初始化操作, 电信自研应用组件的安装部署. <br>
@@ -119,7 +119,7 @@
                         </p>
                     </article>
                     <article>
-                        <h2>2018.12 - 2021.03    卓望数码(移动子公司) - 系统运维 </h2>
+                        <h2>卓望数码(移动子公司) - 系统运维 - 2018.12-2021.03 </h2>
                         <p>
                             1. 保障权益平台(Docker)&权益超市(K8s)两套系统的稳定运行, 处理异常业务. <br>
                             2. 业务Dockerfile文件的编写, CI/CD流程修改, 业务上线部署等. <br>
