--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-04-05 13:07:37
+ * @LastEditTime: 2022-04-06 14:41:18
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -83,8 +83,8 @@
                             熟悉ES的部署配置及维护, Logstash日志正则过滤规则的编写.
                         </li>
                         <li>
-                            <progress value="70" max="100"></progress>
-                            熟悉Ansible, Jenkins, Gitlab等自动化工具的使用.
+                            <progress value="65" max="100"></progress>
+                            熟悉Ansible, Gitlab, Jenkins等自动化工具的使用.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -153,10 +153,10 @@
                         </p>
                     </article>
                     <article>
-                        <h2>ELK日志收集 - 邮电</h2>
+                        <h2>ptc业务日志收集 - 邮电</h2>
                         <p>
-                            <strong style="color: #cf8a05;">项目背景:</strong> 因内部业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群.  <br>
-                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要提前聚合统计, 于Logstash的aggregate模块编写Ruby做聚合计算. 最后Grafana从ES获取数据做图形展示. <a href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件</a></p>
+                            <strong style="color: #cf8a05;">项目背景:</strong> 因内部ptc业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群.  <br>
+                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要使用Logstash的aggregate模块编写Ruby做聚合统计(计算日志单位时间内的平均请求时间等). 最后Grafana从ES获取数据做图形展示. <a href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件</a></p>
                     </article>
                     <article>
                         <h2>电信CCSE(自研K8s)平台维护 - 邮电</h2>
