自动化工具部分技能描述调整

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-04-06 14:41:18
+ * @LastEditTime: 2022-04-12 19:46:00
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -71,20 +71,21 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术.
+                            熟悉Docker容器, K8s容器编排技术, 了解容器网络.
                         </li>
                         <li><progress value="80" max="100"></progress>
                             熟悉Python, 了解其Django框架(曾独立完成了一个demo bbs, <a href="https://github.com/erythrun/demo-warthunder-bbs">仓库链接</a>)</li>
                         <li>
                         <li><progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian操作系统, 了解系统参数调优. </li>
+                            熟悉CentOS, Ubuntu, Debian操作系统, 了解系统参数调优.
+                        </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ES的部署配置及维护, Logstash日志正则过滤规则的编写.
+                            熟悉ES的部署配置及维护, Logstash模块过滤规则的编写.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉Ansible, Gitlab, Jenkins等自动化工具的使用.
+                            熟悉Ansible, Gitlab, 了解Jenkins, Terraform的使用.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
