--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-05-05 16:44:17
+ * @LastEditTime: 2022-05-05 20:00:51
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -74,14 +74,14 @@
                             熟悉Docker容器, K8s容器编排技术, 了解容器网络构成.
                         </li>
                         <li><progress value="80" max="100"></progress>
-                            熟悉Python, 有一定的数据结构算法基础, 了解其Django框架(曾独立完成了一个demo bbs, <a href="https://github.com/erythrun/demo-warthunder-bbs">仓库链接</a>)</li>.
+                            熟悉Python, 有一定的数据结构算法基础, 了解其Django框架(<a href="https://github.com/erythrun/demo-warthunder-bbs">demo bbs</a>).</li>
                         <li>
                         <li><progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优以及shell的使用.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ES集群的部署及维护, Logstash日志过滤规则的编写.
+                            熟悉ELK技术栈: ES集群维护及异常处理, Logstash过滤规则配置编写.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
