--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-05-05 20:24:10
+ * @LastEditTime: 2022-05-05 20:29:31
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -77,7 +77,7 @@
                             熟悉Python, 有一定的数据结构算法基础, 了解其Django框架.</li>
                         <li>
                         <li><progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优以及shell的使用.
+                            熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -115,7 +115,7 @@
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
                             1. 电信自研K8s平台的搭建, 日常维护, 故障处理等. <br>
-                            2. ES集群的搭建, 业务索引权限更改, 处理集群异常. <br>
+                            2. ES集群的搭建, 业务权限配置, 集群异常处理. <br>
                             3. 其它: 新资源池上线服务器的初始化操作; 各组件安全基线整改; Ansible Playbook编写; 维护项目文档等.
                         </p>
                     </article>
