修改排版顺序

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-05-05 20:29:31
+ * @LastEditTime: 2022-05-20 15:20:28
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -30,7 +30,7 @@
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h4>
                 <h4 class="quickFade delayThree">状态: 在职</h4>
                 <h4 class="quickFade delayThree">工作经验: 3年</h4>
-                <h4 class="quickFade delayThree">到岗时间: 2-3周</h4>
+                <h4 class="quickFade delayThree">到岗时间: 一个月内</h4>
             </div>
 
             <!-- <div id="headshot" class="quickFade">
@@ -52,58 +52,6 @@
         </div>
 
         <div id="mainArea" class="quickFade delayFive">
-            <section>
-                <div class="sectionTitle">
-                    <h1>证书</h1>
-                </div>
-                <div id="skill" class="sectionContent">
-                    <h4>CKA(<a href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET-4</h4>
-                    <h4>&nbsp;</h4>
-                </div>
-                <div class="clear"></div>
-            </section>
-            <section>
-                <div class="sectionTitle">
-                    <h1>技能</h1>
-                </div>
-
-                <div id="skill" class="sectionContent">
-                    <ul style="list-style: none">
-                        <li>
-                            <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术, 了解容器网络构成.
-                        </li>
-                        <li><progress value="80" max="100"></progress>
-                            熟悉Python, 有一定的数据结构算法基础, 了解其Django框架.</li>
-                        <li>
-                        <li><progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优.
-                        </li>
-                        <li>
-                            <progress value="70" max="100"></progress>
-                            熟悉ELK技术栈: ES集群维护及异常处理, Logstash过滤规则配置编写.
-                        </li>
-                        <li>
-                            <progress value="65" max="100"></progress>
-                            devops工具: 熟悉Ansible, Gitlab, 了解Jenkins, Terraform.
-                        </li>
-                        <li>
-                            <progress value="65" max="100"></progress>
-                            熟悉使用Grafana做监控展示, 了解Prometheus的使用及查询.
-                        </li>
-                        <li>
-                            <progress value="60" max="100"></progress>
-                            了解Nginx, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置, 维护.
-                        </li>
-                        <li>
-                            <progress value="55" max="100"></progress>
-                            了解数据库原理, 有MySQL, Redis的配置使用经验.
-                        </li>
-                        <li>&nbsp;</li>
-                    </ul>
-                </div>
-                <div class="clear"></div>
-            </section>
             <section>
                 <div class="sectionTitle">
                     <h1>工作</h1>
@@ -225,9 +173,58 @@
                 </div>
                 <div class="clear"></div>
             </section>
+            <section>
+                <div class="sectionTitle">
+                    <h1>技能</h1>
+                </div>
 
-
-
+                <div id="skill" class="sectionContent">
+                    <ul style="list-style: none">
+                        <li>
+                            <progress value="80" max="100"></progress>
+                            熟悉Docker容器, K8s容器编排技术, 了解容器网络构成.
+                        </li>
+                        <li><progress value="80" max="100"></progress>
+                            熟悉Python, 有一定的数据结构算法基础, 了解其Django框架.</li>
+                        <li>
+                        <li><progress value="75" max="100"></progress>
+                            熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优.
+                        </li>
+                        <li>
+                            <progress value="70" max="100"></progress>
+                            熟悉ELK技术栈: ES集群维护及异常处理, Logstash过滤规则配置编写.
+                        </li>
+                        <li>
+                            <progress value="65" max="100"></progress>
+                            devops工具: 熟悉Ansible, Gitlab, 了解Jenkins, Terraform.
+                        </li>
+                        <li>
+                            <progress value="65" max="100"></progress>
+                            熟悉使用Grafana做监控展示, 了解Prometheus的使用及查询.
+                        </li>
+                        <li>
+                            <progress value="60" max="100"></progress>
+                            了解Nginx, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置, 维护.
+                        </li>
+                        <li>
+                            <progress value="55" max="100"></progress>
+                            了解数据库原理, 有MySQL, Redis的配置使用经验.
+                        </li>
+                        <li>&nbsp;</li>
+                    </ul>
+                </div>
+                <div class="clear"></div>
+            </section>
+            <section>
+                <div class="sectionTitle">
+                    <h1>证书</h1>
+                </div>
+                <div id="skill" class="sectionContent">
+                    <h4>CKA(<a href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET-4</h4>
+                    <h4>&nbsp;</h4>
+                </div>
+                <div class="clear"></div>
+            </section>
             <section>
                 <div class="sectionTitle">
                     <h1>自我</h1>
