--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-05-05 20:29:31
+ * @LastEditTime: 2023-02-07 20:09:18
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -29,7 +29,7 @@
                 <h1 class="quickFade delayTwo">郑卓文</h1>
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h4>
                 <h4 class="quickFade delayThree">状态: 在职</h4>
-                <h4 class="quickFade delayThree">工作经验: 3年</h4>
+                <h4 class="quickFade delayThree">工作经验: 4年</h4>
                 <h4 class="quickFade delayThree">到岗时间: 2-3周</h4>
             </div>
 
@@ -42,7 +42,7 @@
                 <ul>
                     <li>学校: 广州大学华软软件学院</li>
                     <li>学历: 全日制本科(2019届)</li>
-                    <li>专业: 网络技术系</li>
+                    <li>专业: 网络安全</li>
                     <li>邮箱: erythron@outlook.com</li>
                     <li>手机: 17199922057</li>
                     <li>微信: 1773990085</li>
@@ -54,16 +54,6 @@
         <div id="mainArea" class="quickFade delayFive">
             <section>
                 <div class="sectionTitle">
-                    <h1>证书</h1>
-                </div>
-                <div id="skill" class="sectionContent">
-                    <h4>CKA(<a href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET-4</h4>
-                    <h4>&nbsp;</h4>
-                </div>
-                <div class="clear"></div>
-            </section>
-            <section>
-                <div class="sectionTitle">
                     <h1>技能</h1>
                 </div>
 
@@ -71,17 +61,18 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术, 了解容器网络构成.
+                            熟悉Docker容器, K8s容器编排技术, 了解容器网络.
                         </li>
                         <li><progress value="80" max="100"></progress>
-                            熟悉Python, 有一定的数据结构算法基础, 了解其Django框架.</li>
+                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
+                        </li>
                         <li>
-                        <li><progress value="75" max="100"></progress>
+                            <progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ELK技术栈: ES集群维护及异常处理, Logstash过滤规则配置编写.
+                            熟悉Logstash日志收集过滤规则编写, 了解ES集群搭建维护及异常处理.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -89,11 +80,15 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉使用Grafana做监控展示, 了解Prometheus的使用及查询.
+                            熟悉使用Grafana做监控展示, 了解Prometheus的原理及使用.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
-                            了解Nginx, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置, 维护.
+                            了解Nginx, Caddy, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置及维护.
+                        </li>
+                        <li>
+                            <progress value="60" max="100"></progress>
+                            有一定的网络安全基础, 了解路由器, 交换机等网络设备.
                         </li>
                         <li>
                             <progress value="55" max="100"></progress>
@@ -148,15 +143,15 @@
                     <article>
                         <h2>Storm容器化部署 - 邮电</h2>
                         <p>
-                            <strong style="color: #cf8a05;">项目背景: </strong>小组接到需求对部分原生组件容器化, 使用helm批量部署并对接到自研K8s. 个人分配到的组件是Storm. 因官方chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
+                            <strong style="color: #cf8a05;">项目背景: </strong>接到需求对组件Storm容器化, 使用Helm批量部署并对接到自研K8s. Helm chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
                             <strong style="color: #cf8a05;">难点: </strong>原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulset使用SC进行持久化; 定制参数则在value文件中追加定义, 并修改相对应的模板, 完成任务.
                         </p>
                     </article>
                     <article>
                         <h2>ptc业务日志收集 - 邮电</h2>
                         <p>
-                            <strong style="color: #cf8a05;">项目背景:</strong> 因内部ptc业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群.  <br>
-                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要使用Logstash的aggregate模块编写Ruby做聚合统计(计算日志单位时间内的平均请求时间等). 最后Grafana从ES获取数据做图形展示. <a href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件</a></p>
+                            <strong style="color: #cf8a05;">项目背景:</strong> 因业务需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, 收集日志到Logstash, 过滤后传输到ES集群.  <br>
+                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 为降低ES集群压力, 部分业务日志还需要使用Logstash的aggregate模块编写Ruby做聚合统计(如计算单位时间内的平均请求时间). 最后Grafana从ES获取数据做图形展示. <a href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件链接</a></p>
                     </article>
                     <article>
                         <h2>电信CCSE(自研K8s)平台维护 - 邮电</h2>
@@ -169,7 +164,7 @@
                     <article>
                         <h2>业务上报自动化 - 卓望</h2>
                         <p>
-                            <strong style="color: #cf8a05;">项目背景: </strong>因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
+                            <strong style="color: #cf8a05;">项目背景: </strong>权益超市在特殊日期业务繁忙时监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
                             href="https://raw.githubusercontent.com/erythrun/OpsScript/master/grafana_monitor_report_by_selenium.py"
                             target="_BLANK">代码链接</a><br>
 
@@ -225,9 +220,16 @@
                 </div>
                 <div class="clear"></div>
             </section>
-
-
-
+            <section>
+                <div class="sectionTitle">
+                    <h1>证书</h1>
+                </div>
+                <div id="skill" class="sectionContent">
+                    <h4>CKA(<a href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET-4</h4>
+                    <h4>&nbsp;</h4>
+                </div>
+                <div class="clear"></div>
+            </section>
             <section>
                 <div class="sectionTitle">
                     <h1>自我</h1>
@@ -239,7 +241,7 @@
                         <h2> </h2>
                         <p>
                             乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
-                            不断提高自己的技术与工作能力(Terraform学习中). <br>
+                            不断提高自己的技术与工作能力. <br>
                             如需查看网页版简历请访问 <a href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
