配合渣打需求修改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-02-14 20:50:21
+ * @LastEditTime: 2023-02-18 23:55:07
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -86,13 +86,17 @@
                             <progress value="65" max="100"></progress>
                             了解Nginx, Caddy, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置及维护.
                         </li>
-                        <li>
+                        <!-- <li>
                             <progress value="60" max="100"></progress>
                             有一定的网络安全基础, 了解路由器, 交换机等网络设备.
-                        </li>
+                        </li> -->
                         <li>
                             <progress value="60" max="100"></progress>
                             了解数据库原理, 有MySQL, Redis的配置使用经验.
+                        </li>
+                        <li>
+                            <progress value="60" max="100"></progress>
+                            了解VMware VSphere平台的使用.
                         </li>
                         <li>&nbsp;</li>
                     </ul>
@@ -111,15 +115,15 @@
                         <p>
                             1. 电信自研K8s平台的搭建, 日常维护, 故障处理等. <br>
                             2. ES集群的搭建, 业务权限配置, 集群异常处理. <br>
-                            3. 其它: 新资源池上线服务器的初始化操作; 各组件安全基线整改; Ansible Playbook编写; 维护项目文档等.
+                            3. 其它: 私有云平台以及组件控制台部署; 平台及组件安全基线整改等.
                         </p>
                     </article>
                     <article>
                         <h2>卓望数码(移动子公司) - 系统运维 - 2018.12-2021.03 </h2>
                         <p>
                             1. 保障权益超市系统的稳定运行, 处理异常业务. <br>
-                            2. 业务Dockerfile文件的编写, CI/CD流程修改, 业务上线部署等. <br>
-                            3. 其它: 编写脚本, 自动化常用的工作流程; 配合研发SQL执行; 监控系统, 业务日志存储维护; 日报编写等.<br>
+                            2. 业务Dockerfile文件的编写, CI/CD流程修改, 业务上线部署, 编写脚本等. <br>
+                            3. 协助维护广东移动VMware VSphere平台.<br>
                         </p>
                     </article>
 
