服务器->发行版

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-02-18 23:55:07
+ * @LastEditTime: 2023-02-23 21:37:54
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -68,7 +68,7 @@
                         </li>
                         <li>
                             <progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian系统, 了解系统参数调优.
+                            熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
