技能顺序调整; 邮电删了一点描述

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-02-23 21:37:54
+ * @LastEditTime: 2023-02-23 23:19:41
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -63,12 +63,12 @@
                             <progress value="80" max="100"></progress>
                             熟悉Docker容器, K8s容器编排技术, 了解容器网络.
                         </li>
-                        <li><progress value="80" max="100"></progress>
-                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
-                        </li>
                         <li>
                             <progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
+                        </li>
+                        <li><progress value="75" max="100"></progress>
+                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -113,9 +113,8 @@
                     <article>
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
-                            1. 电信自研K8s平台的搭建, 日常维护, 故障处理等. <br>
-                            2. ES集群的搭建, 业务权限配置, 集群异常处理. <br>
-                            3. 其它: 私有云平台以及组件控制台部署; 平台及组件安全基线整改等.
+                            1. 电信自研K8s平台的搭建, 日常维护, 业务报障处理等. <br>
+                            2. ES集群的搭建, 业务权限配置, 集群异常处理.
                         </p>
                     </article>
                     <article>
@@ -160,7 +159,7 @@
                     <article>
                         <h2>电信CCSE(自研K8s)平台维护 - 邮电</h2>
                         <p>
-                            内容: 1. 部署, 维护K8s平台高可用集群, 保障集群ETCD, apiserver等组件的正常运行. <br>
+                            内容: 1. 部署, 维护K8s平台高可用集群, 保障集群ETCD, APIserver等组件的正常运行. <br>
                             &emsp;&emsp;&nbsp; 2. 为用户提供技术支持, 排查Pod异常原因, 保障业务在平台的运行. <br>
                             &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞(如SSL密码长度问题)进行修复.
                         </p>
