--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-02-23 23:19:41
+ * @LastEditTime: 2023-03-10 20:52:46
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -30,7 +30,7 @@
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h4>
                 <h4 class="quickFade delayThree">状态: 在职</h4>
                 <h4 class="quickFade delayThree">工作经验: 4年</h4>
-                <h4 class="quickFade delayThree">到岗时间: 2-3周</h4>
+                <h4 class="quickFade delayThree">到岗时间: 一个月内</h4>
             </div>
 
             <!-- <div id="headshot" class="quickFade">
