--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-10 20:52:46
+ * @LastEditTime: 2023-03-14 12:58:23
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -144,6 +144,14 @@
 
                 <div class="sectionContent">
                     <article>
+                        <h2>私有云容器平台搭建以及维护 - 邮电</h2>
+                        <p>
+                            内容: 1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群, 保障平台以及K8s集群组件的运行. <br>
+                            &emsp;&emsp;&nbsp; 2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题, 保障业务在平台的运行. <br>
+                            &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
+                        </p>
+                    </article>
+                    <article>
                         <h2>Storm容器化部署 - 邮电</h2>
                         <p>
                             项目背景: 接到需求对组件Storm容器化, 使用Helm批量部署并对接到自研K8s. Helm chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
@@ -155,14 +163,6 @@
                         <p>
                             项目背景: 因监控需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, Logstash, 过滤后传输到ES集群并展示监控.  <br>
                             个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 部分业务监控数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件链接</a></p>
-                    </article>
-                    <article>
-                        <h2>电信CCSE(自研K8s)平台维护 - 邮电</h2>
-                        <p>
-                            内容: 1. 部署, 维护K8s平台高可用集群, 保障集群ETCD, APIserver等组件的正常运行. <br>
-                            &emsp;&emsp;&nbsp; 2. 为用户提供技术支持, 排查Pod异常原因, 保障业务在平台的运行. <br>
-                            &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞(如SSL密码长度问题)进行修复.
-                        </p>
                     </article>
                     <article>
                         <h2>业务上报自动化 - 卓望</h2>
