私有云项目描述修改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-14 12:58:23
+ * @LastEditTime: 2023-03-16 22:27:47
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -146,8 +146,8 @@
                     <article>
                         <h2>私有云容器平台搭建以及维护 - 邮电</h2>
                         <p>
-                            内容: 1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群, 保障平台以及K8s集群组件的运行. <br>
-                            &emsp;&emsp;&nbsp; 2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题, 保障业务在平台的运行. <br>
+                            内容: 1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群组件的运行. <br>
+                            &emsp;&emsp;&nbsp; 2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题. <br>
                             &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
                         </p>
                     </article>
